@@ -1,3 +1,12 @@
+2007-04-19  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_context.c (Cairo::Context#stroke,
+	Cairo::Context#fill, Cairo::Context#clip): accept 'prserve' option
+	to change XXX and XXX_preserve.
+	* src/lib/cairo/context.rb (Cairo::Context#stroke_preserve,
+	Cairo::Context#fill_preserve, Cairo::Context#clip_preserve): moved
+	from src/rb_cairo_context.c.
+
 2007-04-18  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/lib/cairo/color.rb (Cairo::Color.parse):
